# snowGAN

./: .gitignore  .gitmodules  CLAUDE.md  README.md  config.json  generate.py  main.py  pipeline.py  pyproject.toml  requirements.txt  snowGAN.py  train.py
docs/: ARCHITECTURE.md  AVAI_BOOTSTRAP_PLAN.md  TRANSFER_LEARNING_PLAN.md  UPGRADES.md  architecture.md  cpu-ram-leak-investigation.md  finetuning_upgrades.md  getting_started.md
docs/plans/: model_refactoring_plan.md
model/: snowGAN.py
scripts/: inspect_weights.py  migrate_2d_to_3d_weights.py  migrate_depth1_to_depth2_weights.py  migrate_spectral_norm.py  peek_keras_bundle.py  release_weights.py  validate_3d_migration.py
src/: config.py  generate.py  trainer.py
src/data/: dataset.py
src/models/: discriminator.py  generator.py
src/snowgan/: __init__.py  __main__.py  augment.py  checkpoint.py  config.py  generate.py  inference.py  log.py  losses.py  main.py  modality.py  trainer.py  utils.py  weights.py
src/snowgan/data/: dataset.py
src/snowgan/models/: discriminator.py  generator.py
tests/unit/: test_augment_per_image.py  test_checkpoint.py  test_config_v02_migration.py  test_dataset.py  test_depth_contract.py  test_discriminator.py  test_generate_chunking.py  test_generate_no_stacked_return.py  test_generator_norm.py  test_generator_upsampling.py  test_inference_removed.py  test_lambda_gp_config.py  test_loss_logging.py  test_lr_schedule.py  test_mixed_precision.py  test_modality.py  test_modality_modes.py  test_plot_history_no_leak.py  test_rebuild_sn_guard.py  test_sample_cadence.py  test_seed.py  test_split_persistence_to_disc_config.py  test_splits.py  test_weights_pipeline.py
