[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "snowgan"
version = "1.0.0"
description = "A GAN for practicing fine-tuning and generating images using the Rocky Mountain snowpack dataset (rmdig/rocky_mountain_snowpack)."
readme = "README.md"
authors = [
  { name="Denny Schaedig", email="dennys@rmdig.ai" }
]
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.24",
  "matplotlib>=3.7",
  "pillow>=9.5",
  "datasets>=2.16",
  "click>=8.1",  # optional, if you use click/argparse
  "tensorflow>=2.18",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[project.scripts]
snowgan = "snowgan.main:main"
